--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,11 @@
 			<classifier>natives-desktop</classifier>
 			<version>1.10.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.30</version>
+		</dependency>
 	</dependencies>
 
 	<build>
