--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
 			<artifactId>freemarker</artifactId>
 			<version>2.3.30</version>
 		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId> <!-- Use 'netty-all' for 4.0 or above -->
+			<version>4.1.33.Final</version>
+		</dependency>
 	</dependencies>
 
 
